Adapted cleanup